implement layout of the main page

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,11 +1,13 @@
 .page {
   margin: 0 auto;
-  background-color: #202020;
   color: #FFFFFF;
   font-family: 'Inter', Arial, sans-serif;
-  min-height: 1240px;
 }
 
 body {
   margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
 }
