--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 @import url("components/App/App.css");
+@import url("components/Header/Header.css");
+@import url("components/Main/Main.css");
+@import url("components/Promo/Promo.css");
+@import url("components/AboutProject/AboutProject.css");
+@import url("components/Techs/Techs.css");
+@import url("components/AboutMe/AboutMe.css");
+@import url("components/Footer/Footer.css");
