modify styles for the main page

--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,6 +1,13 @@
 .about-project {
   background-color: #202020;
-  padding: 110px 326px 0;
+}
+
+.about-project__container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1140px;
+  padding-top: 110px;
+  margin: 0 auto;
 }
 
 .about-project__section-heading {
