--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,13 @@
 .footer {
   background-color: #202020;
-  padding: 79px 326px 20px;
+}
+
+.footer__container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1140px;
+  padding-top: 79px;
+  margin: 0 auto;
 }
 
 .footer__info {
@@ -23,6 +30,7 @@
   font-size: 13px;
   line-height: 16px;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .footer__resources_links {
