--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,14 @@
 @import url("components/App/App.css");
 @import url("components/Header/Header.css");
+@import url("components/Navigation/Navigation.css");
 @import url("components/Main/Main.css");
 @import url("components/Promo/Promo.css");
 @import url("components/AboutProject/AboutProject.css");
 @import url("components/Techs/Techs.css");
 @import url("components/AboutMe/AboutMe.css");
 @import url("components/Footer/Footer.css");
+@import url("components/AuthHeader/AuthHeader.css");
+@import url("components/AuthInput/AuthInput.css");
+@import url("components/Register/Register.css");
+@import url("components/Login/Login.css");
+@import url("components/InputError/InputError.css");
