--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,4 @@
 @import url("components/Register/Register.css");
 @import url("components/Login/Login.css");
 @import url("components/InputError/InputError.css");
+@import url("components/NotFound/NotFound.css");
