--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -2,6 +2,14 @@
   align-self: center;
 }
 
+.navigation__not-logged {
+  display: none;
+}
+
+.navigation__logged {
+  display: flex;
+}
+
 .navigation__signup {
   text-decoration: none;
   color: #FFFFFF;
@@ -10,6 +18,7 @@
   font-size: 12px;
   line-height: 16px;
   transition: 0.5s ease-in-out;
+  align-self: center;
 }
 
 .navigation__signup:hover {
@@ -35,3 +44,63 @@
   -webkit-transform: scale(1.5);
   transform: scale(1.2);
 }
+
+.navigation__movies-container {
+  margin-right: 364px;
+  text-decoration: none;
+  align-self: center;
+}
+
+.navigation__movies {
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 18px;
+  color: #FFFFFF;
+  transition: 0.5s ease-in-out;
+}
+
+.navigation__movies:active {
+  font-weight: bold;
+}
+
+.navigation__movies:first-of-type {
+  margin-right: 16px;
+}
+
+.navigation__movies:hover {
+  opacity: 0.8;
+  color: #3DDC84;
+}
+
+.navigation__profile-button {
+  width: 100px;
+  height: 32px;
+  padding: 0;
+  border: 2px solid rgba(170, 170, 170, 0.2);
+  background-color: transparent;
+  box-sizing: border-box;
+  border-radius: 50px;
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  cursor:pointer;
+  transition: 0.5s ease-in-out;
+}
+
+.navigation__profile-button:hover {
+  opacity: 0.8;
+  -ms-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  transform: scale(1.1);
+  background-color: #3DDC84;
+}
+
+a {
+   text-decoration: none;
+ }
+
