--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,9 @@
-.header {
+.header__main-page {
   background-color: #073042;
+}
+
+.header {
+  background-color: #202020;
 }
 
 .header__container {
