--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,6 @@
 @import url("components/Login/Login.css");
 @import url("components/InputError/InputError.css");
 @import url("components/NotFound/NotFound.css");
+@import url("components/Profile/Profile.css");
+@import url("components/Movies/Movies.css");
+@import url("components/SavedMovies/SavedMovies.css");
