--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,5 @@
 @import url("components/Profile/Profile.css");
 @import url("components/Movies/Movies.css");
 @import url("components/SavedMovies/SavedMovies.css");
+@import url("components/SearchBar/SearchBar.css");
+@import url("components/Switch/Switch.css");
