show errors when inputs are empty for auth

--- a/src/components/AuthInput/AuthInput.css
+++ b/src/components/AuthInput/AuthInput.css
@@ -20,3 +20,11 @@ label {
   color: #FFFFFF;
   border: none;
 }
+
+.input-error {
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 12px;
+  color: #EE3465;
+  margin-top: 10px;
+}
