--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -38,6 +38,13 @@
   transition: 0.5s ease-in-out;
 }
 
+.registration__save-button_state_disabled {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.2);
+  background: #4285F4;
+  pointer-events: none;
+}
+
 .registration__save-button:hover {
   opacity: 0.8;
   -ms-transform: scale(1.5);
