--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@
 @import url("components/AuthInput/AuthInput.css");
 @import url("components/Register/Register.css");
 @import url("components/Login/Login.css");
-@import url("components/InputError/InputError.css");
 @import url("components/NotFound/NotFound.css");
 @import url("components/Profile/Profile.css");
 @import url("components/Movies/Movies.css");
 @import url("components/SavedMovies/SavedMovies.css");
 @import url("components/SearchBar/SearchBar.css");
 @import url("components/Switch/Switch.css");
+@import url("components/Card/Card.css");
