--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,4 @@
 @import url("components/MovieCard/MovieCard.css");
 @import url("components/MovieCardList/MovieCardList.css");
 @import url("components/MoreButton/MoreButton.css");
+@import url("components/Preloader/Preloader.css");
