--- a/src/components/AuthHeader/AuthHeader.css
+++ b/src/components/AuthHeader/AuthHeader.css
@@ -6,9 +6,28 @@
 .auth-header__logo {
   margin-bottom: 40px;
 }
+
 .auth-header__greeting {
   font-weight: 500;
   font-size: 24px;
   line-height: 29px;
   margin: 0;
+}
+
+@media all and (max-width: 768px) {
+  .auth-header {
+    margin-top: 190px;
+    margin-bottom: 20px;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .auth-header {
+    margin: 56px auto 60px;
+    text-align: center;
+  }
+
+  .auth-header__logo {
+    margin-bottom: 50px;
+  }
 }
