--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,13 +1,14 @@
 .login {
   background-color: #202020;
-  position:fixed;
-  padding:0;
-  margin:0;
-  top:0;
-  left:0;
+  position: fixed;
+  padding: 0;
+  margin: 0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
+
 .login__container {
   max-width: 396px;
   display: flex;
@@ -49,7 +50,7 @@
   display: flex;
   flex-direction: row;
   align-self: center;
-  margin-top:16px;
+  margin-top: 16px;
 
 }
 
@@ -74,4 +75,31 @@
 
 .login__signup-link:hover {
   opacity: 0.8;
+}
+
+@media all and (max-width: 768px) {
+  .login__save-button {
+    margin: 179px auto 0;
+  }
+}
+
+@media all and (max-width: 425px) {
+  .login__save-button {
+    width: 260px;
+    height: 45px;
+    margin: 267px auto 0;
+    display: block;
+  }
+
+  .login__signup {
+    margin-top: 14px;
+  }
+
+  .login__signup-text {
+    font-size: 12px;
+  }
+
+  .login__signup-link {
+    font-size: 12px;
+  }
 }
