--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -94,7 +94,6 @@
   margin: 0;
 }
 
-
 .about-me__portfolio-links {
   list-style: none;
   padding: 0;
@@ -117,7 +116,7 @@
   padding-bottom: 19px;
 }
 
-.about-me__portfolio li:nth-child(3)>a {
+.about-me__portfolio li:nth-child(3) > a {
   border: none;
   padding-bottom: 0;
 }
@@ -130,6 +129,127 @@
 .about-me__portfolio-link-icon {
   width: 29px;
   height: 60px;
+}
+
+@media screen and (max-width: 1220px) {
+  .about-me__container {
+    max-width: 668px;
+    padding-top: 90px;
+  }
+
+  .about-me__heading {
+    font-size: 40px;
+    line-height: 40px;
+    margin: 66px 0 16px;
+    max-width: 348px;
+  }
+
+  .about-me__speciality {
+    font-size: 12px;
+    line-height: 18px;
+    margin-bottom: 20px;
+    margin-top: 0;
+    max-width: 348px;
+  }
+
+  .about-me__text {
+    font-size: 12px;
+    line-height: 18px;
+    margin-bottom: 87px;
+    margin-top: 0;
+    max-width: 364px;
+  }
+
+  .about-me__personal-photo {
+    width: 255px;
+    height: 255px;
+  }
+
+  .about-me__portfolio {
+    margin-top: 90px;
+  }
+
+  .about-me__portfolio-link {
+    font-size: 28px;
+  }
+
+  .about-me__portfolio-links {
+    margin-bottom: 90px;
+  }
+
+}
+
+@media screen and (max-width: 700px) {
+  .about-me__container {
+    max-width: 292px;
+    padding-top: 70px;
+  }
+
+  .about-me__section-heading {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+  }
+
+  .about-me__description {
+    flex-direction: column-reverse;
+  }
+
+  .about-me__heading {
+    font-size: 30px;
+    line-height: 36px;
+    margin: 40px 0 20px;
+    max-width: 292px;
+  }
+
+  .about-me__speciality {
+    font-size: 11px;
+    line-height: 16px;
+    margin-bottom: 20px;
+    margin-top: 0;
+    max-width: 292px;
+  }
+
+  .about-me__text {
+    font-size: 11px;
+    line-height: 16px;
+    margin-bottom: 40px;
+    margin-top: 0;
+    max-width: 292px;
+  }
+
+  .about-me__personal-photo {
+    width: 292px;
+    height: 292px;
+    margin-top: 60px;
+  }
+
+  .about-me__social-network {
+    margin-right: 26px;
+  }
+
+  .about-me__portfolio {
+    margin-top: 69px;
+  }
+
+  .about-me__portfolio_heading {
+    font-size: 14px;
+  }
+
+  .about-me__portfolio-link {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .about-me__portfolio-link-icon {
+    width: 18px;
+    height: 28px;
+  }
+
+  .about-me__portfolio-links {
+    margin-bottom: 70px;
+    margin-top: 40px;
+  }
 }
 
 
