--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -18,3 +18,33 @@
   height: 38px;
   margin: 18px 0;
 }
+
+@media screen and (max-width: 1220px) {
+  .header__container {
+    max-width: 1024px;
+  }
+
+  .header__logo {
+    margin: 18px 0 18px 30px
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__container {
+    max-width: 768px;
+  }
+
+  .header__logo {
+    margin: 18px 0 18px 30px
+  }
+}
+
+@media screen and (max-width: 465px) {
+  .header__container {
+    max-width: 320px;
+  }
+
+  .header__logo {
+    margin: 18px 0 18px 14px
+  }
+}
