--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -3,11 +3,11 @@
 }
 
 .navigation__not-logged {
-  display: none;
+  display: flex;
 }
 
 .navigation__logged {
-  display: flex;
+  display: none;
 }
 
 .navigation__signup {
@@ -98,4 +98,34 @@
   -webkit-transform: scale(1.5);
   transform: scale(1.1);
   background-color: #3DDC84;
+}
+
+@media screen and (max-width: 1024px) {
+  .navigation {
+    margin: 0 30px 0 0;
+  }
+}
+
+/*@media screen and (max-width: 768px) {*/
+/*  .navigation {*/
+/*    margin: 0 30px 0 0;*/
+/*  }*/
+/*}*/
+
+@media screen and (max-width: 760px) {
+  .navigation {
+    margin: 0 14px 0 0;
+  }
+
+  .navigation__signin-button {
+    width: 54px;
+    height: 26px;
+    font-size: 12px;
+  }
+
+  .navigation__signup {
+    margin-right: 14px;
+    font-size: 10px;
+  }
+
 }
