--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -65,3 +65,55 @@
 .rotation {
   animation: rotation 20s linear infinite;
 }
+
+@media screen and (max-width: 1220px) {
+  .promo__container {
+    display: flex;
+    flex-direction: column-reverse;
+    max-width: 768px;
+    padding-top: 140px;
+    text-align: center;
+  }
+
+  .promo__heading {
+    font-size: 40px;
+    line-height: 50px;
+    width: 680px;
+    margin: 48px auto 22px;
+  }
+
+  .promo__text {
+    width: 260px;
+    margin: 0 auto 92px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .promo__container {
+    display: flex;
+    flex-direction: column-reverse;
+    max-width: 320px;
+    padding-top: 70px;
+  }
+
+  .promo__logo {
+    width: 210px;
+    height: 206px;
+  }
+
+  .promo__heading {
+    font-size: 30px;
+    line-height: 38px;
+    width: 300px;
+    margin: 44px auto 24px;
+  }
+
+  .promo__text {
+    width: 260px;
+    margin: 0 auto 80px;
+  }
+
+  .promo__button {
+    margin-bottom: 30px;
+  }
+}
