--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -74,3 +74,77 @@
 .techs__technology:last-of-type {
   margin-right: 0;
 }
+
+@media screen and (max-width: 1220px) {
+  .techs__container {
+    max-width: 668px;
+    padding-top: 90px;
+    margin: 0 auto;
+  }
+
+  .techs__heading {
+    margin: 80px auto 22px;
+  }
+
+  .techs__text {
+    font-size: 12px;
+    line-height: 18px;
+    margin: 0 auto 83px;
+  }
+
+  .techs__technology {
+    font-size: 12px;
+    width: 84px;
+    height: 57px;
+    margin-bottom: 90px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .techs__container {
+    max-width: 284px;
+    padding-top: 70px;
+    margin: 0 auto;
+    padding-bottom: 70px;
+  }
+
+  .techs__section-heading {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+    margin: 0;
+    display: flex;
+  }
+
+  .techs__heading {
+    font-size: 30px;
+    line-height: 36px;
+    width: 292px;
+    margin: 60px auto 24px;
+  }
+
+  .techs__text {
+    font-size: 11px;
+    line-height: 16px;
+    width: 292px;
+    margin: 0 auto 50px;
+  }
+
+
+  .techs__technologies {
+    justify-content: center;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+  }
+
+  .techs__technology {
+    font-size: 12px;
+    width: 84px;
+    height: 57px;
+    margin-bottom: 0;
+  }
+}
