--- a/src/components/Switch/Switch.css
+++ b/src/components/Switch/Switch.css
@@ -68,3 +68,19 @@ input:checked + .switch__slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
+
+@media screen and (max-width: 1220px) {
+  .switch {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .switch {
+    margin-left: 0;
+  }
+
+  .switch__text {
+    font-size: 11px;
+  }
+}
