--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,6 +1,5 @@
 .profile {
   background-color: #202020;
-  display: flex;
   justify-content: center;
   flex-direction: column;
   position:fixed;
@@ -14,10 +13,14 @@
   margin: 0;
   align-self: center;
   padding-top: 74px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
 }
 
 .profile__form {
-  margin: 107px auto 220px;
+  margin: 123px auto 220px;
   width: 410px;
 }
 
@@ -32,7 +35,7 @@
 }
 
 .profile__label {
-  min-width: 141px;
+  width: 141px;
   font-weight: 500;
   font-size: 11px;
   line-height: 13px;
@@ -72,6 +75,7 @@
   background-color: #202020;
   cursor: pointer;
   transition: 0.5s ease-in-out;
+  margin: 0 auto;
 }
 
 .profile__modify-button:hover{
@@ -97,4 +101,36 @@
   -ms-transform: scale(1.5);
   -webkit-transform: scale(1.5);
   transform: scale(1.1);
+}
+
+@media screen and (max-width: 1220px) {
+  .profile__greeting {
+    padding-top: 236px;
+  }
+
+  .profile__form {
+    margin: 96px auto 210px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .profile__greeting {
+    padding-top: 70px;
+  }
+
+  .profile__form {
+    width: 260px;
+    margin: 80px auto 379px;
+  }
+
+  .profile__modify-button {
+    width: 300px;
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .profile__logout {
+    font-size: 12px;
+    line-height: 15px;
+  }
 }
