--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -55,6 +55,10 @@
   border: none;
 }
 
+.profile__input:focus {
+  outline: none;
+}
+
 .profile__footer {
   display: flex;
   flex-direction: column;
