--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -30,6 +30,12 @@
   width: 100%;
 }
 
+.search-bar__form_input:focus-within {
+  border: 1px solid #3DDC84;
+  opacity: 0.8;
+  box-shadow:2px 2px 4px 4px rgba(61, 220, 132, 0.2);
+}
+
 .search-bar__form_input input:focus {
   outline: none;
 }
