--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,4 @@
 @import url("components/MovieCardList/MovieCardList.css");
 @import url("components/MoreButton/MoreButton.css");
 @import url("components/Preloader/Preloader.css");
+@import url("components/InfoTooltip/InfoTooltip.css");
