--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -50,13 +50,19 @@
   line-height: 13px;
   text-align: right;
   color: #FFFFFF;
-  margin-bottom: 16px;
   background-color: #202020;
   border: none;
 }
 
 .profile__input:focus {
   outline: none;
+}
+
+.profile__input-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 260px;
+  text-align: right;
 }
 
 .profile__footer {
@@ -80,6 +86,12 @@
   cursor: pointer;
   transition: 0.5s ease-in-out;
   margin: 0 auto;
+}
+
+.profile__modify-button_state_disabled {
+  color: rgba(250, 250, 250, 0.4);
+  pointer-events: none;
+  cursor: none;
 }
 
 .profile__modify-button:hover{
@@ -136,5 +148,15 @@
   .profile__logout {
     font-size: 12px;
     line-height: 15px;
+  }
+
+  .profile__input-container {
+    display: flex;
+    flex-direction: column;
+    max-width: 100px;
+  }
+
+  .profile__input-error {
+    width: 100%;
   }
 }
