--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -69,6 +69,7 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+  margin-top: 220px;
 
 }
 
@@ -127,6 +128,14 @@
   .profile__form {
     margin: 96px auto 210px;
   }
+
+  .profile__footer {
+    margin-top: 210px;
+  }
+
+  .profile__modify-button {
+    width: 410px;
+  }
 }
 
 @media screen and (max-width: 700px) {
@@ -140,7 +149,7 @@
   }
 
   .profile__modify-button {
-    width: 300px;
+    width: 100%;
     font-size: 12px;
     line-height: 15px;
   }
@@ -158,5 +167,9 @@
 
   .profile__input-error {
     width: 100%;
+  }
+
+  .profile__footer {
+    margin-top: 379px;
   }
 }
