--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -40,8 +40,7 @@
 }
 
 .preloader {
-  /*Change display: flex to see the preloader*/
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
