--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -46,14 +46,15 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  padding: 20px;
   background-color: #202020;
+  padding: 0;
 }
 
 .preloader__container {
   width: 100px;
   height: 100px;
   position: relative;
+  margin: 150px auto 0;
 }
 
 .preloader__round {
